--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
     <servlet.version>3.1.0</servlet.version>
     <log4j.version>1.2.17</log4j.version>
     <log4j-api.version>2.10.0</log4j-api.version>
+    <druid.version>1.1.9</druid.version>
   </properties>
   <dependencies>
     <!--servlet config begin-->
@@ -152,6 +153,12 @@
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
       <version>${c3p0.version}</version>
+    </dependency>
+    <!-- 加入druid数据源依赖包 -->
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid</artifactId>
+      <version>${druid.version}</version>
     </dependency>
     <!--jstl config-->
     <dependency>
@@ -332,6 +339,11 @@
       <groupId>redis.clients</groupId>
       <artifactId>jedis</artifactId>
       <version>${jedis.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.sonatype.aether</groupId>
+      <artifactId>aether-api</artifactId>
+      <version>1.7</version>
     </dependency>
     <!-- redis cache related.....end -->
 
